...
    <string name="CP_editText_StartTime">Start time</string>
    <string name="CP_editText_EndTime">End time</string>
    <string-array name="academicYear_array">
        <item>Choose academic year</item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
        <item>Postgraduate</item>
    </string-array>
    <string name="CP_imageView_ProfilePicture">Profile Picture</string>
    <string name="CP_button_ChooseImage">Choose profile picture</string>
    <string name="CP_textView_ChooseTags">What are you interested in?</string>
...
